log/build_2022-11-15_13-46-36/motpy_pifpaf/stderr.log
  File "/root/motpy_pifpaf/install/motpy_pifpaf/lib/python3.8/site-packages/motpy_pifpaf/rgbd_motpy_pifpaf.py", line 30
    In_Pose_Topic =
                   ^
SyntaxError: invalid syntax

